--- a/_config.yml
+++ b/_config.yml
@@ -1,52 +1,49 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: Aiden McVean's Portfolio
-email: amcvean@mtu.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  This site contains Aiden McVean's work portfolio, made for DATA1201 at MTU.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "https://amcvean.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  amcvean
+description: This contains Aiden McVean's projects, information, and experience as a Data Scientist.
+baseurl: ""
+url: https://amcvean.github.io
 
-# Build settings
-theme: minima
+theme: cvless
+
+# site settings
+taglong: Jekyll theme for a beautiful online CV
+tagshort: Jekyll theme
+
+# author settings
+author:
+  name: Aiden McVean
+  email: amcvean@mtu.edu
+photo: assets/files/photo.jpg
+address: Houghton, MI
+phone: (248)-894-6955
+
+# social media links
+social:
+  facebook: 
+  x: 
+  instagram: 
+  linkedin: 
+  xing: 
+  stackoverflow: 
+  medium: 
+  github: amcvean
+
+# build settings
+permalink: pretty
+exclude:
+  - LICENSE
+  - README.md
+  - Gemfile
+  - vendor/
+  - docker-compose.yml
+
 plugins:
   - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate-v2
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+sass:
+  sourcemap: never
+  
